<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<packaging>pom</packaging>

	<groupId>net.certiv</groupId>
	<artifactId>net.certiv.fluent.dt</artifactId>
	<version>1.8.0-SNAPSHOT</version>

	<name>FluentMark :: parent</name>
	<description>FluentMark parent</description>
	<organization>
		<name>Certiv Analytics</name>
		<url>www.certiv.net</url>
	</organization>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<jdk.version>11</jdk.version>
		<maven.compiler.source>${jdk.version}</maven.compiler.source>
		<maven.compiler.target>${jdk.version}</maven.compiler.target>
		<tycho.version>3.0.4</tycho.version>

		<eclipse.latest>http://download.eclipse.org/releases/latest</eclipse.latest>

		<local.root>file:/D:/DevFiles/Eclipse</local.root>
		<certiv.root>${local.root}/Tools/Certiv</certiv.root>
		<dsl.root>${local.root}/Tools/Dsl</dsl.root>

		<eclipse.latest>http://download.eclipse.org/releases/latest</eclipse.latest>

		<local.root>file:/D:/DevFiles/Eclipse</local.root>
		<certiv.root>${local.root}/Tools/Certiv</certiv.root>
		<dsl.root>${local.root}/Tools/Dsl</dsl.root>

		<tools.repo>${certiv.root}/net.certiv.tools.parent/net.certiv.tools.site/target/repository</tools.repo>
		<dsl.repo>${dsl.root}/net.certiv.dsl/net.certiv.dsl.site/target/repository</dsl.repo>
		<spell.repo>${dsl.root}/net.certiv.spellchecker/site/target/repository</spell.repo>
		
		<jetty.version>11.0.15</jetty.version>
		<log4j.ver>2.20.0</log4j.ver>
		<plantuml.version>1.2023.7</plantuml.version>

	</properties>

	<repositories>
		<repository>
			<id>eclipse</id>
			<layout>p2</layout>
			<url>${eclipse.latest}</url>
		</repository>
		<repository>
			<id>tools</id>
			<layout>p2</layout>
			<url>${tools.repo}</url>
		</repository>
		<repository>
			<id>dsl</id>
			<layout>p2</layout>
			<url>${dsl.repo}</url>
		</repository>
		<repository>
			<id>speller</id>
			<layout>p2</layout>
			<url>${spell.repo}</url>
		</repository>
	</repositories>

	<modules>
		<module>net.certiv.fluent.dt.core</module>
		<module>net.certiv.fluent.dt.ui</module>
		<module>net.certiv.fluent.dt.vis</module>
		<module>net.certiv.fluent.dt.feature</module>
		<module>net.certiv.fluent.dt.site</module>
	</modules>

	<build>
		<plugins>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<compilerArgs>
						<arg>-warn:-raw,unchecked</arg>
					</compilerArgs>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<version>${tycho.version}</version>
				<executions>
					<execution>
						<id>plugin-source</id>
						<goals>
							<goal>plugin-source</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<includePackedArtifacts>true</includePackedArtifacts>
					<dependency-resolution>
						<optionalDependencies>require</optionalDependencies>
					</dependency-resolution>
					<environments>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-packaging-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<format>yyyyMMdd-HHmm</format>
					<archive>
						<addMavenDescriptor>false</addMavenDescriptor>
					</archive>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<id>package-feature</id>
						<configuration>
							<finalName>${project.artifactId}-${unqualifiedVersion}.${buildQualifier}</finalName>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>
</project>
